...
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <ViewStub
        style="@style/bt_main_view_controller_container"
        android:id="@+id/bt_stub_loading_view"
        android:inflatedId="@+id/bt_inflated_loading_view"
        android:layout="@layout/bt_loading_view" />

    <ViewStub
        style="@style/bt_main_view_controller_container"
        android:id="@+id/bt_stub_payment_methods_list"
        android:inflatedId="@+id/bt_inflated_payment_methods_list"
...
